--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -8,20 +8,26 @@ block contenido
        h1.text-4xl.my-10.font-extrabold.text-center Bienes 
             span.font-normal Raices
        h2.text-center.text-2xl.font-extrabold= pagina
+ 
+        if errores 
+            div(class="max-w-md mx-auto my-10")
+                each error in errores 
+                    p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold= error.msg
 
        div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-            form.space-y-8
+            form.space-y-8(methos="POST" action="/propiedades/crear")
+                input(type="hidden" name="_csrf" value= csrfToken)
                 div.space-y-5
                     h3.text-lg.leading-6.font-medium.text-gray-900 Información General
                     p.text-gray-600 Añade Información sobre la propiedad en venta
                     
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="titulo") Titulo de Anuncio
-                        input#titulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Titulo Propiedad, ej. Casa en la Playa" type="text" name="titulo")
+                        input#titulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Titulo Propiedad, ej. Casa en la Playa" type="text" name="titulo" value= datos.titulo ? datos.titulo : "")
                     
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="descripcion") Descripcion
-                        textarea#descripcion.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Descripcion de la propiedad" name="descripcion")
+                        textarea#descripcion.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Descripcion de la propiedad" name="descripcion")= datos.descripcion ? datos.descripcion : ""
                     
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
                         div(class="md:w-1/2")
@@ -29,23 +35,23 @@ block contenido
                             select#categoria.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="categoria")
                                 option(value="") - Seleccione -
                                 each categoria in categorias
-                                    option(value=categoria.id)=categoria.nombre
+                                    option(value=categoria.id selected= datos.categoria ? datos.categoria == categoria.id ? true : false : null )=categoria.nombre
 
                         div(class="md:w-1/2") 
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio
                             select#precio.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="precio")
                                 option(value="") - Seleccione -
                                 each precio in precios
-                                    option(value=precio.id)=precio.nombre
+                                    option(value=precio.id selected= datos.precio ? datos.precio == precio.id ? true : false : null )=precio.nombre
                     
                     div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
                         div(class="md:w-1/3")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="habitaciones") Habitaciones
                             select#habitaciones.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="habitaciones")
-                                option(value="") - Seleccione -
+                                option(value="" ) - Seleccione -
                                 - let n = 1;
                                     while n < 5
-                                        option(value=n) #{n++}
+                                        option(value=n selected= datos.habitaciones ? datos.habitaciones == n ? true : false : null) #{n++}
 
                         div(class="md:w-1/3") 
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="estacionamiento") Estacionamiento
@@ -53,7 +59,7 @@ block contenido
                                 option(value="") - Seleccione -
                                 - let i = 1;
                                     while i < 5
-                                        option(value=i) #{i++}
+                                        option(value=i selected= datos.estacionamiento ? datos.estacionamiento == i ? true : false : null) #{i++}
                     
                         div(class="md:w-1/3")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="wc") WC
@@ -61,7 +67,7 @@ block contenido
                                 option(value="") - Seleccione -
                                 - let j = 1;
                                     while j < 5
-                                        option(value=j) #{j++}
+                                        option(value=j selected= datos.wc ? datos.wc == j ? true : false : null) #{j++}
 
                     div(class="mb-4 border-gray-200 border-t py-5 space-y-5")
                         h3(class="mb-4 text-lg leading-6 font-medium text-gray-900") Ubicación
@@ -69,11 +75,14 @@ block contenido
                         div(id="mapa", class="w-full h-80 mb-4")
 
                         div 
-                            p.calle
+                            p.calle= datos.calle ? datos.calle : ""
 
-                        input(type="hidden" name="calle" id="calle")
-                        input(type="hidden" name="lat" id="lat")
-                        input(type="hidden" name="lng" id="lng")
+                        input(type="hidden" name="calle" id="calle" value= datos.calle ? datos.calle : "")
+                        input(type="hidden" name="lat" id="lat" value= datos.lat ? datos.lat : "")
+                        input(type="hidden" name="lng" id="lng" value= datos.lng ? datos.lng : "")
+                    
+                    input(class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit" value="Añadir Imagen")
+
 block scripts
     script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
     script(src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js")
